--- a/Home2.html
+++ b/Home2.html
@@ -190,7 +190,7 @@ noodleMaxNum()">
 </div>
 </div>
 
-<div class="card mb-3" style="margin:0% 1%;width: 48%;">
+<div class="card mb-3  noodecolor" style="margin:0% 1%;width: 48%;">
 <div class="row g-0">
 
 <div class="col-md-4">
@@ -997,4 +997,5 @@ noodleMaxNum()
 </div>
 
 </body>
+
 </html>
